CB-5099: FreeIPA changes to support AWS instance recovery
This change adds an automatic cloudwatch alarm during
the instance creation for AWS and removes it during
termination. This is only necessary for AWS as Azure
enables this by default. This enables an instance to
automatically recover when the underlying hardware,
owned by AWS, is faulty.